[project]
name = "llm"
version = "0.11"
description = "A CLI utility and Python library for interacting with Large Language Models, including OpenAI, PaLM and local models installed on your own machine."
authors = [{name="Simon Willison", email="example@email.com"}]
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.10"

dependencies = [
    "setuptools>=68.2.2",
    "click>=8.1.7",
    "openai>=0.28.1",
    "click-default-group>=1.2.4",
    "sqlite-utils>=3.35.1",
    "sqlite-migrate>=0.1b0",
    "pydantic>=2.4.2",
    "PyYAML>=6.0.1",
    "pluggy>=1.3.0",
    "python-ulid>=2.2.0",
    "pip>=23.3.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "numpy>=1.25.2",
    "requests-mock>=1.11.0",
    "cogapp>=3.3.0",
    "mypy>=1.6.1",
    "black>=23.10.1",
    "ruff>=0.1.3",
    "types-click>=7.1.8",
    "types-PyYAML>=6.0.12.12",
    "types-requests>=2.31.0.10",
    "types-setuptools>=68.2.0.0",
]


[scripts]
llm = "llm.cli:cli"
